# huus

./: Cargo.toml  Makefile  README.md  rustfmt.toml
huus/: Cargo.toml
huus/src/: commands.rs  conversions.rs  errors.rs  filters.rs  lib.rs  query.rs  types.rs  updates.rs  values.rs
huus/tests/: commands.rs  conversions.rs  entry_filters.rs  entry_updates.rs  object_filters.rs  object_updates.rs
huus_macros/: Cargo.toml
huus_macros/huus/: test.huus.rs
huus_macros/src/: define_huus.rs  definition_input.rs  definition_output.rs  definition_spec.rs  lib.rs  parser.rs
huus_macros/src/define_huus/: input.rs  output.rs
huus_macros/templates/: enum.rs  struct.rs
huus_macros/tests/: definition.rs  formulation_queries.rs  formulation_validation.rs  tests.rs
huus_macros_support/: Cargo.toml
huus_macros_support/src/: definition.rs  formulation.rs  lib.rs  parser.rs
huus_macros_support/src/definition/: data.rs  generator.rs  input.rs  interpreter.rs  output.rs  validator.rs
huus_macros_support/src/formulation/: generator.rs  input.rs  interpreter.rs  output.rs  validator.rs
huus_macros_support/templates/: data.rs  enum_definition.rs  enum_formulation.rs  filter.rs  object.rs  struct_definition.rs  struct_formulation.rs  union_definition.rs  union_formulation.rs  update.rs
