[package]
name = "huus_macros"
version = "0.1.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
askama = { version = "0.8" }
proc-macro2 = { version = "1.0" }
syn = { "version" = "1.0", features = ["full"] }
huus = { version = "0.1.0" }

[dev-dependencies]
bson = "0.11"
chrono = "0.4"
maplit = "1.0"

